# cos-matic

./: .gitignore  AGENTS.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  ROADMAP.md  deny.toml  goals.toml  harness.toml
.cursor/rules/: core-values.mdc
.github/workflows/: ci.yml  contracts.yml  orchestrator-loop.yml  security.yml
ci-templates/: README.md  agent-o-matic.yml  bolt-cos-matic.yml  cos-matic.yml
content/domains/: agent-behavior.md  anti-gold-plating.md  code-style.md  factual-style.md  four-axes.md  response-blocks.md  security-baseline.md  tdd.md
crates/aom/: Cargo.toml
crates/aom/src/: audit.rs  error.rs  generate.rs  goals.rs  handoff.rs  ir.rs  lib.rs  library.rs  lock.rs  resolve.rs  safe_write.rs
crates/aom/src/config/: parse.rs  schema.rs
crates/aom/src/render/: claude.rs  cursor.rs  mod.rs  universal.rs
crates/aom/tests/: adr_consistency.rs  e2e.rs
crates/cli/: Cargo.toml
crates/cli/src/: cli.rs  init.rs  main.rs
crates/cli/templates/: harness.toml
crates/cli/templates/domains/: core-values.md
crates/cli/templates/workflows/: orchestrator-loop.yml
crates/cli/tests/: cli.rs  cli_behavior.rs  init.rs  stack_cli.rs
crates/core/: Cargo.toml
crates/core/src/: error.rs  generate.rs  handoff.rs  inspect.rs  lib.rs  library.rs  lock.rs  maturity.rs  resolve.rs  safe_write.rs  stack.rs
crates/core/src/config/: mod.rs  schema.rs
crates/core/src/render/: cursor.rs  universal.rs
crates/core/tests/: e2e.rs  stack_validation.rs
crates/orchestrator/: Cargo.toml
crates/orchestrator/src/: authorization.rs  automerge.rs  branch_gc.rs  candidate_score.rs  deploy.rs  dispatch.rs  forge.rs  gate.rs  goals.rs  incident.rs  lib.rs  pipeline.rs  planning_gates.rs
docs/: codex-routine.md  local-llm.md  orchestrator-runbook.md
docs/adr/: 0001-positioning-and-why-build.md  0002-language-rust.md  0003-source-format-toml-plus-markdown.md  0004-safe-write-sentinel-lockfile.md  0005-error-handling-miette.md  0006-adapter-output-model.md  0006-workspace-and-orchestrator-charter.md  0007-feature-gating-graceful-degradation.md  0007-gate-evaluation-model.md  0008-embedded-content-library.md  0008-workspace-and-orchestrator-charter.md  0009-goals-safe-declarative-checks.md  0010-drift-as-ci-gate.md  0011-workspace-and-orchestrator-charter.md  0012-github-via-octocrab.md  0013-claude-tier2-extensions.md  0014-dispatch-bounded-fixer.md  0015-autonomous-merge.md  0016-deploy-canary-smoke-rollback.md  0017-end-to-end-loop.md  0018-publish-step.md  0019-operate-loop-as-scoped-ci-bot.md  0021-coverage-as-ci-gate.md  0022-loop-bounded-retry.md  0023-bounded-fixer-bash-hardening.md  0024-stub-fixer-for-plumbing.md  0025-north-star-trustworthy-autonomy.md  0026-architecture-targets-seams-isolation-durability.md  0027-orchestrator-consolidated-on-octocrab.md  0028-init-onboarding-wizard.md  0029-portability-rust-core-bind-not-reimplement.md  0030-distribution-doctrine-append-only.md  0031-supply-chain-and-sovereignty.md  0032-native-ui-and-binding-matrix.md  0033-rust-core-doctrine-hardening.md  0034-bolt-cos-matic-and-bolt-harness-split.md  0035-bounded-branch-owning-autonomy.md  0036-orchestration-authorization-model.md  0037-evidence-derived-planning-gates.md  0038-solo-maintainer-branch-governance.md  (+1 more)
docs/evidence/: 2026-07-01-local-llm-smoke.md  README.md
docs/superpowers/plans/: 2026-06-27-a3-incident-issue.md  2026-06-27-harness-workspace-foundation.md  2026-06-29-gear-cable-extraction.md  2026-06-30-cosmatic-routine-harness.md
domains/: core-values.md
examples/minimal/: AGENTS.md  CLAUDE.md  harness.toml
examples/minimal/.claude/agents/: reviewer.md
examples/minimal/.cursor/rules/: code-style.mdc  security.mdc  tdd.mdc
examples/minimal/.harness/: lock.toml
examples/minimal/domains/: code-style.md  security.md
scripts/: audit-deps.sh  live-loop-smoke.sh  local-llm-smoke.sh  sandbox-setup.sh
src/: audit.rs  cli.rs  error.rs  generate.rs  goals.rs  ir.rs  lib.rs  library.rs  lock.rs  main.rs  merge.rs  paths.rs  resolve.rs  safe_write.rs
src/config/: parse.rs  schema.rs
src/render/: claude.rs  cursor.rs  mod.rs  universal.rs
tests/: cli.rs  e2e.rs
