[workspace]
resolver = "3"
members = ["crates/aom", "crates/cli", "crates/orchestrator"]

[workspace.package]
edition = "2024"
rust-version = "1.95"
license = "MIT"
repository = "https://github.com/constantin-jais/Agent-O-Matic"

[workspace.dependencies]
blake3 = "1"
clap = { version = "4", features = ["derive"] }
miette = { version = "7", features = ["fancy"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
toml = "0.8"
tempfile = "3"
agent-o-matic = { path = "crates/aom" }

[profile.release]
strip = true
lto = "thin"
