[workspace]
resolver = "3"
members = ["crates/core", "crates/cli", "crates/orchestrator"]

[workspace.package]
edition = "2024"
rust-version = "1.95"
license = "MIT"
repository = "https://github.com/constantin-jais/bolt-cos-matic"

[workspace.dependencies]
blake3 = "1"
clap = { version = "4", features = ["derive"] }
inquire = "0.7"
miette = { version = "7", features = ["fancy"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
toml = "1.1"
tempfile = "3"
bolt-cos-matic = { path = "crates/core" }
octocrab = "0.53"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
async-trait = "0.1"
orchestrator = { path = "crates/orchestrator" }

[profile.release]
strip = true
lto = "thin"
