[package]
name = "aom-cli"
version = "0.0.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[[bin]]
name = "aom"
path = "src/main.rs"

[dependencies]
agent-o-matic.workspace = true
clap.workspace = true
inquire.workspace = true
miette.workspace = true
orchestrator.workspace = true
tokio.workspace = true

[dev-dependencies]
tempfile.workspace = true
