[package]
name = "bolt-cos-matic-cli"
version = "0.1.0-alpha.4"
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[[bin]]
name = "bolt-cosmatic"
path = "src/main.rs"

[dependencies]
bolt-cos-matic.workspace = true
clap.workspace = true
inquire.workspace = true
miette.workspace = true
orchestrator.workspace = true
serde_json.workspace = true
tokio.workspace = true

[dev-dependencies]
ed25519-dalek.workspace = true
tempfile.workspace = true
