[package]
name = "bolt-cos-matic"
version = "0.1.0-alpha.3"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "A clean-room, deterministic, agent-agnostic configuration compiler: one declarative source, many AI-agent configs, with safe-write and drift detection."
keywords = ["ai", "agents", "codegen", "claude", "agents-md"]
categories = ["command-line-utilities", "development-tools"]

[lib]
name = "bolt_cos_matic"
path = "src/lib.rs"

[dependencies]
blake3.workspace = true
miette.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
toml.workspace = true

[dev-dependencies]
tempfile.workspace = true
