[package]
name = "orchestrator"
version = "0.1.0-alpha.2"
edition.workspace = true
rust-version.workspace = true
license.workspace = true

# Network access (GitHub via octocrab) is confined to the `forge` module;
# everything else stays offline and deterministic. See ADR-0012.
[dependencies]
blake3.workspace = true
serde.workspace = true
serde_json.workspace = true
octocrab.workspace = true
tokio.workspace = true
async-trait.workspace = true

[dev-dependencies]
tempfile.workspace = true
